список студентов, модель студент, модели в админук

--- a/templates/student_form.html
+++ b/templates/student_form.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}
-Список студентов
+Список студентfов
 {% endblock %}
 {% block content %}
-    <h1>Список студентов</h1>
+    <h1>Список студенddsтов</h1>
     <table>
         <thead>
         <td>Номер зачетной книжки</td>
