--- a/templates/students_list.html
+++ b/templates/students_list.html
@@ -1,22 +1,23 @@
 {% extends 'base.html' %}
 {% block title %}
-Список преподавателей
+Список студентов
 {% endblock %}
 {% block content %}
-    <h1>Список преподавателей</h1>
+    <h1>Список студентов</h1>
     <table>
         <thead>
+        <td>Номер зачетной книжки</td>
         <td>ФИО</td>
-        <td>Должность</td>
-        <td>Звание</td>
-        <td>Телефон</td>
+        <td>Группа</td>
         </thead>
         <tbody>
-            <!--tr>
-                <td>
-
-                </td>
-            </tr-->
+            {% for i in student_list %}
+            <tr>
+                <td> {{ i.student.StudentID }} </td>
+                <td> {{ i.student.FIO }} </td>
+                <td> {{ i.group.Name }} </td>
+            </tr>
+            {% endfor %}
         </tbody>
     </table>
 {% endblock %}
