--- a/templates/teacher_form.html
+++ b/templates/teacher_form.html
@@ -1,11 +1,27 @@
 {% extends 'base.html' %}
 {% block title %}
-Teacher form
+    Добавление сотрудника
 {% endblock %}
 {% block content %}
- <form action="" method="post">
-        <table>
-            <input type="submit" value="Submit"/>
-        </table>
+    <h1>Добавление сотрудника </h1>
+    <form action='/teacher/' method="post">
+        {% csrf_token %}
+    <table>
+    <tr>
+        <td align="right">ФИО сотрудника</td>
+        <td> <input type="text" name="FIO"> </td>
+    </tr>
+    <tr>
+        <td align="right">Должность сотрудника</td>
+        <td> <input type="text" name="Position"> </td>
+    </tr>
+    <tr>
+        <td align="right">Звание сотрудника</td>
+        <td> <input type="text" name="Zvanie"> </td>
+    </tr>
+
+    </table>
+        <input  type="submit" value="Сохранить"/>
     </form>
 {% endblock %}
+
