--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load bootstrap4 %}
 {% block content %}
     <div class="large-offset-3 large-6 columns">
         <form action="/auth/login/" method="post">
@@ -11,8 +11,7 @@
             {% if login_error %}
                 <label class="error">{{ login_error }}</label>
             {% endif %}
-            <input class="button" type="submit" value="Войти">
-            <div class="label round secondary"><a href="/auth/register/">Регистрация</a></div>
+            <button type="submit" class="btn btn-primary">Войти</button>
         </form>
     </div>
 {% endblock %}
