--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,6 @@
 <body>
   <div class="jumbotron">
     <div class="container">
-        <h1>Привет!</h1>
       <p>
           {% block content %}
           {% endblock %}
