--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,7 @@
             <h1>Регистрация</h1>
             <pre>{{ form }}</pre>
             <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+            <a href="/auth/login/" class="btn btn-success">Войти&raquo;</a>
         </form>
     </div>
 {% endblock %}
