--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
   <title>Заголовок страницы</title>
   {% load staticfiles %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
+    <script src="{% static 'js/bootstrap.js' %}"></script>
 </head>
 <body>
   <div class="jumbotron">
