--- a/templates/register.html
+++ b/templates/register.html
@@ -1,11 +1,47 @@
 {% extends 'base.html' %}
-{% load bootstrap4 %}
+{% load widget_tweaks %}
 {% block content %}
     <div class="container">
         <form action="/auth/register/" method="post">
             {% csrf_token %}
             <h1>Регистрация</h1>
-            <pre>{{ form }}</pre>
+         {{ form.non_field_errors }}
+  {% for hidden_field in form.hidden_fields %}
+  {{ hidden_field }}
+{% endfor %}
+
+{% if form.non_field_errors %}
+  <div class="alert alert-danger" role="alert">
+    {% for error in form.non_field_errors %}
+      {{ error }}
+    {% endfor %}
+  </div>
+{% endif %}
+
+{% for field in form.visible_fields %}
+  <div class="form-group">
+    {{ field.label_tag }}
+
+    {% if form.is_bound %}
+      {% if field.errors %}
+        {% render_field field class="form-control is-invalid" %}
+        {% for error in field.errors %}
+          <div class="invalid-feedback">
+            {{ error }}
+          </div>
+        {% endfor %}
+      {% else %}
+        {% render_field field class="form-control is-valid" %}
+      {% endif %}
+    {% else %}
+      {% render_field field class="form-control" %}
+    {% endif %}
+
+    {% if field.help_text %}
+      <small class="form-text text-muted">{{ field.help_text }}</small>
+    {% endif %}
+  </div>
+{% endfor %}
             <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
             <a href="/auth/login/" class="btn btn-success">Войти&raquo;</a>
         </form>
