--- a/templates/student_form.html
+++ b/templates/student_form.html
@@ -1,22 +1,24 @@
 {% extends 'base.html' %}
 {% block title %}
-Список студентfов
+    Добавление студента
 {% endblock %}
 {% block content %}
-    <h1>Список студенddsтов</h1>
-    <table>
-        <thead>
-        <td>Номер зачетной книжки</td>
-        <td>ФИО</td>
-        <td>Группа</td>
-        </thead>
-        <tbody>
-            {% for i in student_list %}
-            <tr>
-                <td> {{ i.StudentID }} </td>
-                <td> {{ i.FIO }} </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <h1>Добавление студента</h1>
+    <form method="post">
+        {% csrf_token %}
+        <table>
+        <tr>
+            <td align="right">ФИО студента</td>
+            <td><input id="id_fio" type="text" name="fio" maxlength="255"></td>
+        </tr>
+        <tr>
+            <td align="right">Номер зачетной книжки</td>
+            <td><input id="id_studid" type="text" name="studid" maxlength="255"></td>
+        </tr>
+        {{ form.as_table }}
+        </table>
+         <button type="submit">Сохранить</button>
+         <a href="{% url 'student_changelist' %}">Вернуться</a>
+    </form>
 {% endblock %}
+
