--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
             <label for="password">Пароль</label>
             <p><input type="password" name="password" id="password"></p>
             {% if login_error %}
-                <label class="error">{{ login_error }}</label>
+                <p><label class="error">{{ login_error }}</label></p>
             {% endif %}
             <button type="submit" class="btn btn-success">Войти</button>
             <a href="/auth/register/" class="btn btn-primary">Регистрация&raquo;</a>
