--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
                 <p><label class="error">{{ login_error }}</label></p>
             {% endif %}
             <button type="submit" class="btn btn-success">Войти</button>
-            <a href="/auth/register/" class="btn btn-primary">Регистрация&raquo;</a>
+            <a href="/auth/register/" class="btn btn-primary">Регистрация</a>
         </form>
     </div>
 {% endblock %}
