--- a/templates/register.html
+++ b/templates/register.html
@@ -43,7 +43,7 @@
                 </div>
             {% endfor %}
             <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
-            <a href="/auth/login/" class="btn btn-success">Войти&raquo;</a>
+            <a href="/auth/login/" class="btn btn-success">Вернуться обратно</a>
         </form>
     </div>
 {% endblock %}
