--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,31 @@
 </head>
 <body>
       <div class="wrapper">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+              <span class="navbar-brand mb-0 h1">Меню</span>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/auth/login/">Вход <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/auth/register/">Регистрация</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/teacher/">Список преподавателей</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link disabled" href="/student/">Список студентов</a>
+                  </li>
+                </ul>
+                  <span class="navbar-text">
+                      Добро пожаловать!
+                  </span>
+              </div>
+            </nav>
         <div class="content">
       <p>
           {% block content %}
@@ -20,7 +45,7 @@
 
         <div class="footer">
             <!--<img src="{% static 'mainApp/image/1.png' %}" class="img-thumbnail">-->
-            <hr>&copy; Все права защищены 2018
+        &copy; Все права защищены 2018
         </div>
       </div>
 </body>
