--- a/templates/base.html
+++ b/templates/base.html
@@ -36,12 +36,16 @@
                   </span>
               </div>
             </nav>
-        <div class="content">
-      <p>
+        <!--<div class="form-row">-->
+            <!--<div class="col-md-4 mb-3">-->
+                <div class="content">
+            <p>
           {% block content %}
           {% endblock %}
-      </p>
-        </div>
+            </p>
+                </div>
+            <!--</div>-->
+      <!--</div>-->
 
         <div class="footer">
             <!--<img src="{% static 'mainApp/image/1.png' %}" class="img-thumbnail">-->
