--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Заголовок страницы</title>
+  <title>Добро пожаловать</title>
   {% load staticfiles %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
-  <link rel="stylesheet" href="{% static 'css/my.css' %}" type="text/css">
+  <!--<link rel="stylesheet" href="{% static 'css/my.css' %}" type="text/css">-->
     <script src="{% static 'js/bootstrap.js' %}"></script>
 </head>
 <body>
-      <div class="wrapper">
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
               <span class="navbar-brand mb-0 h1">Меню</span>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,21 +35,17 @@
                   </span>
               </div>
             </nav>
-        <!--<div class="form-row">-->
-            <!--<div class="col-md-4 mb-3">-->
+          <div class="wrapper">
                 <div class="content">
             <p>
           {% block content %}
           {% endblock %}
             </p>
                 </div>
-            <!--</div>-->
-      <!--</div>-->
-
-        <div class="footer">
+          </div>
+        <!--<div class="footer">-->
             <!--<img src="{% static 'mainApp/image/1.png' %}" class="img-thumbnail">-->
-        &copy; Все права защищены 2018
-        </div>
-      </div>
+        <!--&copy; Все права защищены 2018-->
+        <!--</div>-->
 </body>
 </html>
