--- a/templates/teacher_form.html
+++ b/templates/teacher_form.html
@@ -4,24 +4,13 @@
 {% endblock %}
 {% block content %}
     <h1>Добавление сотрудника </h1>
-    <form action='/teacher/' method="post">
+    <form action='/teacher/create_teacher/' method="post">
         {% csrf_token %}
-    <table>
-    <tr>
-        <td align="right">ФИО сотрудника</td>
-        <td> <input type="text" name="FIO"> </td>
-    </tr>
-    <tr>
-        <td align="right">Должность сотрудника</td>
-        <td> <input type="text" name="Position"> </td>
-    </tr>
-    <tr>
-        <td align="right">Звание сотрудника</td>
-        <td> <input type="text" name="Zvanie"> </td>
-    </tr>
 
-    </table>
-        <input  type="submit" value="Сохранить"/>
+            {{ form.as_p }}
+
+
+        <input type="submit">
     </form>
 {% endblock %}
 
