--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
                   <li class="nav-item active">
                     <a class="nav-link disabled" href="/student/">Список студентов</a>
                   </li>
+                   <li class="nav-item active">
+                    <a class="nav-link disabled" href="/disciplines/list/">Список предметов</a>
+                  </li>
                 </ul>
                   <span class="navbar-text">
                       Добро пожаловать!
