--- a/templates/register_success.html
+++ b/templates/register_success.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
-{% load bootstrap4 %}
 {% block content %}
     <div class="container">
-        <center>
-            <h1>Вы успешно зарегистрировались!</h1>
-            <p></p>
-            <p><a href="/auth/login/" class="btn btn-success">Авторизоваться</a></p>
-        </center>
+        <div class="row">
+            <div class="col-lg-12 col-lg-offset-12">
+                <center>
+                    <h1 class="title">Вы успешно зарегистрировались!</h1>
+                    <p></p>
+                    <p><a href="/auth/login/" class="btn btn-success">Авторизоваться</a></p>
+                </center>
+            </div>
+        </div>
     </div>
 {% endblock %}
