--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="container">
-        <form action="/auth/login/" method="post">
+        <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
             <div class="form-row">
                 <div class="col-md-4 mb-3">
@@ -14,7 +14,7 @@
                         <p><label class="error">{{ login_error }}</label></p>
                     {% endif %}
                     <button type="submit" class="btn btn-success">Войти</button>
-                    <a href="/auth/register/" class="btn btn-primary">Регистрация</a>
+                    <a href="{% url 'register' %}" class="btn btn-primary">Регистрация</a>
                 </div>
             </div>
         </form>
