--- a/templates/teachers_list.html
+++ b/templates/teachers_list.html
@@ -4,39 +4,26 @@
 {% endblock %}
 {% block content %}
     <h1>Список преподавателей</h1>
-    <table>
+    <table class="table table-bordered">
         <thead>
-        <td>ФИО</td>
-        <td>Должность</td>
-        <td>Звание</td>
-        <td>Кафедра</td>
-        <td>Телефон</td>
-
+        <th scope="col">ФИО</th>
+        <th scope="col">Должность</th>
+        <th scope="col">Звание</th>
+        <th scope="col">Кафедра</th>
+        <th scope="col">Телефон</th>
         </thead>
         <tbody>
-        {% for teacher in teachers %}
+            {% for teacher in teachers %}
             <tr>
-                <td>
-                    {{ teacher.FIO }}
-                </td>
-                <td>
-                    {{ teacher.Position }}
-                </td>
-                <td>
-                    {% if teacher.Zvanie %}
+                <td> {{ teacher.FIO }} </td>
+                <td> {{ teacher.Position }} </td>
+                <td> {% if teacher.Zvanie %}
                    {{  teacher.Zvanie }}
-                    {% endif %}
-                </td>
-                <td>
-                    {{ teacher.cathedra }}
-
-                </td>
+                    {% endif %} </td>
+                <td> {{ teacher.cathedra }} </td>
             </tr>
-        {% endfor %}
+            {% endfor %}
         </tbody>
     </table>
-
-    <a href="/teacher/create_teacher">
-        Добавить нового сотрудника
-    </a>
+    <a href="{% url 'create_teacher' %}" class="btn btn-success">Добавить нового сотрудника</a>
 {% endblock %}
