--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,16 @@
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Добро пожаловать</title>
-  {% load staticfiles %}
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
-  <script src="{% static 'js/bootstrap.js' %}"></script>
-</head>
-<body>
+    <head>
+        {% load staticfiles %}
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
+
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        {% block head %}
+        <title>Добро пожаловать</title>
+        {% endblock %}
+    </head>
+        <body>
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
               <span class="navbar-brand mb-0 h1">Меню</span>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,10 +50,11 @@
               </div>
             </nav>
                 <div class="container">
-                    <p>
+                    <br>
                         {% block content %}
                         {% endblock %}
-                    </p>
                 </div>
-</body>
+        </body>
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
 </html>
