--- a/templates/register_success.html
+++ b/templates/register_success.html
@@ -6,7 +6,7 @@
                 <center>
                     <h1 class="title">Вы успешно зарегистрировались!</h1>
                     <p></p>
-                    <p><a href="{% url 'login' %}" class="btn btn-success">Авторизоваться</a></p>
+                    <p><a href="{% url 'disciplines_list' %}" class="btn btn-success">Начать работу</a></p>
                 </center>
             </div>
         </div>
