--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="{% url 'student_changelist' %}">Список студентов</a>
                   </li>
                    <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'disciplines_list' %}">Список предметов</a>
+                    <a class="nav-link" href="{% url 'disciplines:disciplines_list' %}">Список предметов</a>
                   </li>
                 </ul>
                 <ul class="navbar-nav navbar-right">
