--- a/templates/disciplines.html
+++ b/templates/disciplines.html
@@ -22,5 +22,5 @@
         </tbody>
     </table>
 
-    <a href="{% url 'disciplines_add' %}" class="btn btn-success">Добавить новый предмет</a></p>
+    <a href="{% url 'disciplines:disciplines_add' %}" class="btn btn-success">Добавить новый предмет</a></p>
 {% endblock %}
