--- a/templates/login.html
+++ b/templates/login.html
@@ -3,8 +3,8 @@
     <div class="container">
         <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
-            <div class="form-row">
-                <div class="col-md-4 mb-3">
+            <div class="row justify-content-md-center">
+                <div class="col-md-4">
                     <h1>Вход в систему</h1>
                     <label for="username">Имя пользователя</label>
                     <p><input required type="text" class="form-control" name="username" id="username" placeholder="Введите имя пользователя"></p>
