--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
                   {% if user.is_authenticated %}
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'list_teachers' %}">Список преподавателей</a>
+                    <a class="nav-link" href="{% url 'teachers:list_teachers' %}">Список преподавателей</a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="{% url 'student_changelist' %}">Список студентов</a>
