--- a/templates/teacher_form.html
+++ b/templates/teacher_form.html
@@ -4,14 +4,14 @@
 {% endblock %}
 {% block content %}
     <h1>Добавление сотрудника </h1>
-    <form action="{% url 'create_teacher' %}" method="post">
+    <form action="{% url 'teachers:create_teacher' %}" method="post">
         {% csrf_token %}
         <table>
             {{ form.as_table }}
         </table>
         <p></p>
         <button type="submit" class="btn btn-success">Сохранить</button>
-        <a href= "{% url 'list_teachers' %}" class="btn btn-primary">Отмена</a>
+        <a href= "{% url 'teachers:list_teachers' %}" class="btn btn-primary">Отмена</a>
     </form>
 {% endblock %}
 
