--- a/templates/teachers_list.html
+++ b/templates/teachers_list.html
@@ -37,7 +37,7 @@
         </tbody>
     </table>
 
-    <a href="/teacher/create_teacher" class="btn btn-primary">
+    <a href="{% url 'teachers:create_teacher' %}" class="btn btn-primary">
         Добавить нового сотрудника
     </a>
 {% endblock %}
