--- a/templates/student_form.html
+++ b/templates/student_form.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}
-    Добавление студента
-{% endblock %}
 {% block content %}
+<title>Добавление студента</title>
     <h1>Добавление студента</h1>
     <form method="post">
         {% csrf_token %}
