--- a/templates/students_list.html
+++ b/templates/students_list.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}
-Список студентов
-{% endblock %}
 {% block content %}
+<title>Список студентов</title>
     <h1>Список студентов</h1>
     <table class="table table-bordered">
         <thead>
