--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
 {% block content %}
+<title>Регистрация</title>
     <div class="container">
         <form action="{% url 'register' %}" method="post">
             {% csrf_token %}
