--- a/templates/teachers_list.html
+++ b/templates/teachers_list.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}
-Список преподавателей
-{% endblock %}
 {% block content %}
+<title>Список преподавателей</title>
     <h1>Список преподавателей</h1>
     <table class="table table-bordered">
         <thead>
