--- a/templates/disciplines.html
+++ b/templates/disciplines.html
@@ -10,25 +10,23 @@
         <th scope="col">Преподаватель</th>
         <th scope="col">Тип контроля</th>
         <th scope="col"></th>
+        <th scope="col"></th>
         </thead>
         <tbody>
             {% for discipline in discipline_list %}
             <tr>
-                <td> <a href="{% url 'disciplines:update' discipline.id %}">{{ discipline.Name }}</a> </td>
+                <td> <a href="{% url 'disciplines:detail' discipline.id %}">{{ discipline.Name }}</a> </td>
                 <td> {{ discipline.code }} </td>
                 <td> {{ discipline.program }} </td>
                 <td> {{ discipline.lecturer }} </td>
                 <td> {{ discipline.control }} </td>
-                <td>
-                    <form action = '/disciplines/delete/' method="post">
-                        {% csrf_token %}
-                         <input type="hidden" name="discipline" value="{{ discipline.id }}" />
-                         <input type="submit" value="Удалить" class="btn btn-danger">
-                    </form>
-                </td>
+                <td> <a href="{% url 'disciplines:update' discipline.id %}"><input type="submit" value="Изменить"
+                                                                                   class="btn btn-primary"></a></td>
+                <td> <a href="{% url 'disciplines:delete' discipline.id %}"><input type="submit" value="Удалить"
+                                                                                   class="btn btn-danger"></a></td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
-    <a href="{% url 'disciplines:disciplines_add' %}" class="btn btn-success">Добавить новый предмет</a></p>
+    <a href="{% url 'disciplines:disciplines_add' %}" class="btn btn-success">Добавить новый предмет</a>
 {% endblock %}
