--- a/templates/disciplines_delete.html
+++ b/templates/disciplines_delete.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
-<title>Удаление предмета </title>
-    <h1>Удаление предмета </h1>
-    <form action="{% url 'disciplines:delete' %}" method="post">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-success">Удалить</button>
-        <a href= "{% url 'disciplines:disciplines_list' %}" class="btn btn-primary">Отмена</a>
-    </form>
+<title>Подтверждение удаления</title>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-lg-offset-12">
+                <center>
+                    <h3 class="title">Вы уверены что хотите удалить предмет "{{ object }}"?</h3>
+                    <p></p>
+                    <form method="post">
+                        {% csrf_token %}
+                    <p><button class="btn btn-danger">Подтвердить удаление</button></p>
+                        <a href="{% url 'disciplines:disciplines_list' %}" class="btn btn-primary">Отмена</a>
+                    </form>
+                </center>
+            </div>
+        </div>
+    </div>
 {% endblock %}
-
-
-
-
-
