--- a/templates/disciplines_detail.html
+++ b/templates/disciplines_detail.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <!-- Left Album Info -->
-        <div class="col-sm-5">
+        <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-body">
                      <table class="table table-bordered">
@@ -16,14 +16,39 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td> {{ discipline.Name }} </td>
-                                <td> {{ discipline.code }} </td>
-                                <td> {{ discipline.program }} </td>
-                                <td> {{ discipline.lecturer }} </td>
-                                <td> {{ discipline.control }} </td>
+                                <td> {{ form.object.subject.Name }} </td>
+                                <td> {{ form.object.subject.code }} </td>
+                                <td> {{ form.object.subject.program }} </td>
+                                <td> {{ form.object.subject.lecturer }} </td>
+                                <td> {{ form.object.subject.control }} </td>
                             </tr>
                         </tbody>
                     </table>
+
+                    <table class="table table-bordered">
+        <thead>
+        <th scope="col">Предмет</th>
+        <th scope="col">Кол-во часов</th>
+        <th scope="col">Кол-во лекций</th>
+        <th scope="col">Кол-во практики</th>
+        <th scope="col">Кол-в лаб. работ</th>
+        <th scope="col">Кол-в КСР</th>
+        <th scope="col">Кол-в СРС</th>
+        <th scope="col">Семестр</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td> {{ form.object.subject }} </td>
+                <td> {{ form.object.Credit }} </td>
+                <td> {{ form.object.Lecture }} </td>
+                <td> {{ form.object.Practice }} </td>
+                <td> {{ form.object.Lab }} </td>
+                <td> {{ form.object.KSR }} </td>
+                <td> {{ form.object.SRS }} </td>
+                <td> {{ form.object.semestr }} </td>
+            </tr>
+        </tbody>
+    </table>
                     <a href="{% url 'disciplines:disciplines_list' %}" class="btn btn-success">Вернуться</a>
                 </div>
             </div>
