Добавление деталей предмета

--- a/templates/disciplines.html
+++ b/templates/disciplines.html
@@ -29,4 +29,5 @@
         </tbody>
     </table>
     <a href="{% url 'disciplines:disciplines_add' %}" class="btn btn-success">Добавить новый предмет</a>
+    <a href="{% url 'disciplines:details_add' %}" class="btn btn-success">Добавить детали предмета</a>
 {% endblock %}
