--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
     <head>
         {% load staticfiles %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
-
+        <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap4.min.css' %}" type="text/css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -52,6 +52,18 @@
                         {% endblock %}
                 </div>
         </body>
+        </body>
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+    <script src="{% static 'js/dataTables.bootstrap4.min.js' %}"></script>
+    <script>
+    $(document).ready( function () {
+    $('#disciplines_table').DataTable( {
+    "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Russian.json"
+            }
+        } );
+    } );
+</script>
 </html>
