сортировка таблицы студентов

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,4 +66,13 @@
         } );
     } );
 </script>
+<script>
+    $(document).ready( function () {
+    $('#students_table').DataTable( {
+    "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Russian.json"
+            }
+        } );
+    } );
+</script>
 </html>
