--- a/templates/students_list.html
+++ b/templates/students_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <title>Список студентов</title>
     <h1>Список студентов</h1>
-    <table class="table table-bordered">
+    <table id="students_table" class="table table-bordered">
         <thead>
         <th scope="col">Номер зачетной книжки</th>
         <th scope="col">ФИО</th>
