фильтрация списка преподавателей

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,4 +75,13 @@
         } );
     } );
 </script>
+<script>
+    $(document).ready( function () {
+    $('#teachers_list').DataTable( {
+    "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Russian.json"
+            }
+        } );
+    } );
+</script>
 </html>
