--- a/templates/teachers_list.html
+++ b/templates/teachers_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <title>Список преподавателей</title>
     <h1>Список преподавателей</h1>
-    <table class="table table-bordered">
+    <table id="teachers_list" class="table table-bordered">
         <thead>
         <th scope="col">ФИО</th>
         <th scope="col">Должность</th>
