--- a/templates/disciplines.html
+++ b/templates/disciplines.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Список предметов{% endblock %}
 {% block content %}
-<title>Список предметов</title>
     <h1>Список предметов</h1>
     <table id="disciplines_table" class="table table-bordered">
         <thead>
