--- a/templates/disciplines_update.html
+++ b/templates/disciplines_update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Изменение предмета{% endblock %}
 {% block content %}
-<title>Изменение предмета </title>
     <h1>Изменение предмета </h1>
     <form action="" method="post">
         {% csrf_token %}
