--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Вход в систему{% endblock %}
 {% block content %}
-<title>Вход в систему</title>
     <div class="container">
         <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
