--- a/templates/student_update.html
+++ b/templates/student_update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Изменение студента{% endblock %}
 {% block content %}
-<title>Изменение студента</title>
     <h1>Изменение студента</h1>
     <form method="post">
         {% csrf_token %}
