--- a/templates/disciplines_delete.html
+++ b/templates/disciplines_delete.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Подтверждение удаления{% endblock %}
 {% block content %}
-<title>Подтверждение удаления</title>
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-lg-offset-12">
