--- a/templates/disciplines_detail.html
+++ b/templates/disciplines_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Детали предмета{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
