--- a/templates/register_success.html
+++ b/templates/register_success.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Успешная регистрация{% endblock %}
 {% block content %}
-<title>Успешная регистрация</title>
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-lg-offset-12">
