--- a/templates/teacher_edit.html
+++ b/templates/teacher_edit.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}
-    Редактирование сотрудника
-{% endblock %}
+{% block title %}Редактирование сотрудника{% endblock %}
 {% block content %}
     <h1>Редактирование сотрудника </h1>
     <form action=""  method="post">
@@ -11,6 +9,5 @@
         </table>
         <p></p>
         <button type="submit" class=" save btn btn-success">Сохранить</button>
-
     </form>
 {% endblock %}
