--- a/templates/teachers_list.html
+++ b/templates/teachers_list.html
@@ -1,16 +1,17 @@
 {% extends 'base.html' %}
+{% block title %}Список преподавателей{% endblock %}
 {% block content %}
-<title>Список преподавателей</title>
     <h1>Список преподавателей</h1>
     <table id="teachers_list" class="table table-bordered">
         <thead>
+        <tr>
         <th scope="col">ФИО</th>
         <th scope="col">Должность</th>
         <th scope="col">Звание</th>
         <th scope="col">Кафедра</th>
         <th scope="col">Телефон</th>
         <th scope="col"></th>
-
+        </tr>
         </thead>
         <tbody>
         {% for teacher in teachers %}
