--- a/templates/disciplines.html
+++ b/templates/disciplines.html
@@ -9,7 +9,7 @@
         <th scope="col">Код</th>
         <th scope="col">Специализация</th>
         <th scope="col">Преподаватель</th>
-        <th scope="col">Тип контроля</th>
+        <th scope="col">Тип</th>
         <th scope="col"></th>
         <th scope="col"></th>
         </tr>
