--- a/templates/details_form.html
+++ b/templates/details_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'
+{% extends 'base.html' %}
 {% block title %}Добавление деталей предмета{% endblock %}
 {% block content %}
     <h1>Пожалуйста, добавьте детали предмета </h1>
